# rjvm

./: Cargo.toml  Main.java  README.md
crates/debuger/: Cargo.toml
crates/debuger/src/: class_view.rs  classes.rs  console.rs  control.rs  debugger.rs  docking.rs  heap.rs  logger.rs  main.rs  stack.rs  testing.rs
java_std/classes/java/util/: currency.data
java_std/lib/: jexec  jspawnhelper
lib/: attribute_info.rs  class.rs  constant_info.rs  constant_tags.rs  error.rs  field_info.rs  java_class.rs  java_class_stream.rs  jvm.rs  jvm_state.rs  lib.rs  logger.rs  method_info.rs  opcodes.rs  stream.rs  types.rs
lib/attributes/: bootstrap_methods.rs  code.rs  exeptions.rs  inner_classes.rs  line_number_table.rs  local_variabile_table.rs  local_variabile_type_table.rs  method_perameters.rs  mod.rs  module.rs  module_package.rs  nest_members.rs  primitted_subclasses.rs  record.rs  runtime_invisible_annotations.rs  runtime_invisible_parameter_annotations.rs  runtime_invisible_type_annotations.rs  runtime_visible_annotations.rs  runtime_visible_parameters_annotations.rs  runtime_visible_type_annotations.rs  stack_map_table.rs
lib/interpeter/: getfield.rs  getstatic.rs  invokespecial.rs  invokestatic.rs  mod.rs  putfield.rs  putstatic.rs
src/: main.rs
