[package]
name = "debuger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.19.0", features = ["dark-light", "wgpu"]}
egui_dock = "0.2.1"
rjvm = {path = "../.."}
egui-kman-additions = {path = "../../../egui-kman-additions"}
